# houseganpp

./: .gitignore  pyproject.toml  requirements.txt  test.py
data/: sample_list.txt
data/json/: 18477.json  19307.json  36233.json
misc/: utils.py
