[tool.poetry]
name = "houseganpp"
version = "0.1.0"
description = ""
authors = ["Ryota Kobayashi <s.woods.m.29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20250402"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
